--- a/web_site_practice/index.html
+++ b/web_site_practice/index.html
@@ -6,6 +6,17 @@
         <title>練習</title>
     </head>
     <body>
+        <h1>基本</h1>
         <p>hello world!</p>
+        <br>
+        <h1>よく使うタグ一覧</h1> 
+        <br> 
+        <h1>見出しのタグ</h1>
+            <h1>ここには1番目に大きな見出しが入ります。</h1>
+            <h2>ここには2番目に大きな見出しが入ります。</h2>
+            <h3>ここには3番目に大きな見出しが入ります。</h3>
+            <h4>ここには4番目に大きな見出しが入ります。</h4>
+            <h5>ここには5番目に大きな見出しが入ります。</h5>
+            <h6>ここには6番目に大きな見出しが入ります。</h6>
     </body>
 </html>
