[Finish]Webサイトを作ってみよう-2

--- a/web_site_practice/index.html
+++ b/web_site_practice/index.html
@@ -48,6 +48,6 @@
         <h1>pタグ</h1>
         <p>プログラミング学習において、「継続」は大事な要素の一つです。継続さえしていれば必ずスキルを習得する事ができます。</p>
         
-        
+        <p>webサイトを作ってみようの第1章を終了する</p>
     </body>
 </html>
